--- a/WebApplication1/Views/Prestamos/Index.cshtml
+++ b/WebApplication1/Views/Prestamos/Index.cshtml
@@ -53,9 +53,8 @@
             @Html.DisplayFor(modelItem => item.FechaEntrega)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+            @Html.ActionLink("Devolucion", "Delete", new { id = item.ID })
         </td>
     </tr>
 }
